[gd_scene load_steps=17 format=3 uid="uid://djwx010m2w43t"]

[ext_resource type="Script" uid="uid://cg0k1rkhkxc1o" path="res://scenes/main/create_world.gd" id="1_nfubj"]
[ext_resource type="StyleBox" uid="uid://dangb5pt2glm4" path="res://scenes/global/panel/panel.tres" id="1_u7sv1"]
[ext_resource type="FontFile" uid="uid://beyr33vcgbm81" path="res://assets/font/LuckiestGuy.ttf" id="2_nfubj"]
[ext_resource type="StyleBox" uid="uid://c4b122e0cvpoy" path="res://scenes/global/btn/normal_btn.tres" id="3_r67mw"]
[ext_resource type="StyleBox" uid="uid://bwpmac4yonj2h" path="res://scenes/global/btn/pressed_btn.tres" id="4_ctrgi"]
[ext_resource type="StyleBox" uid="uid://c1i73j4eax07c" path="res://scenes/global/btn/hover_btn.tres" id="5_smb0b"]
[ext_resource type="StyleBox" uid="uid://bp41wgc3sfray" path="res://scenes/global/btn/disabled_btn.tres" id="6_o5olm"]
[ext_resource type="StyleBox" uid="uid://b3p4mq3jh4ghh" path="res://scenes/global/btn/focus_btn.tres" id="7_b5gyq"]
[ext_resource type="FontFile" uid="uid://ir3t8xybm2be" path="res://assets/font/Bungee-Regular.ttf" id="8_bs61g"]
[ext_resource type="StyleBox" uid="uid://c4p6w77gk6tqw" path="res://scenes/global/btn/normal_circle.tres" id="9_43ffj"]
[ext_resource type="StyleBox" uid="uid://ctaxkk6gidyje" path="res://scenes/global/btn/pressed_circle.tres" id="10_b8ycx"]
[ext_resource type="StyleBox" uid="uid://bsgm6cnrj4y03" path="res://scenes/global/btn/hover_circle.tres" id="11_xxrcf"]
[ext_resource type="StyleBox" uid="uid://cu1k0gt41u1eo" path="res://scenes/global/btn/disabled_circle.tres" id="12_ymudp"]
[ext_resource type="StyleBox" uid="uid://dmhpqfy30s7h7" path="res://scenes/global/btn/focus_circle.tres" id="13_vmvqf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_klo70"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(0.06666667, 0.11764706, 0.18431373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7sv1"]
bg_color = Color(1, 1, 1, 0)

[node name="create_world" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nfubj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 90.0
offset_right = 1360.0
offset_bottom = 989.99994
theme_override_styles/panel = ExtResource("1_u7sv1")

[node name="next_btn" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 280.0
offset_top = 780.0
offset_right = 520.0
offset_bottom = 860.0
theme_override_fonts/font = ExtResource("2_nfubj")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_r67mw")
theme_override_styles/pressed = ExtResource("4_ctrgi")
theme_override_styles/hover = ExtResource("5_smb0b")
theme_override_styles/disabled = ExtResource("6_o5olm")
theme_override_styles/focus = ExtResource("7_b5gyq")
text = "ㅤcreateㅤ"

[node name="back_btn" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 40.0
offset_right = 130.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("8_bs61g")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("9_43ffj")
theme_override_styles/pressed = ExtResource("10_b8ycx")
theme_override_styles/hover = ExtResource("11_xxrcf")
theme_override_styles/disabled = ExtResource("12_ymudp")
theme_override_styles/focus = ExtResource("13_vmvqf")
text = "◀"

[node name="label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 800.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0.06666667, 0.11764706, 0.18431373, 1)
theme_override_fonts/font = ExtResource("2_nfubj")
theme_override_font_sizes/font_size = 64
text = "ㅤCREATE WORLDㅤ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Panel"]
anchors_preset = 0
offset_left = 50.0
offset_top = 150.0
offset_right = 750.0
offset_bottom = 750.0

[node name="name_label" type="Label" parent="Panel/Control"]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(0.06666667, 0.11764706, 0.18431373, 1)
theme_override_fonts/font = ExtResource("2_nfubj")
theme_override_font_sizes/font_size = 32
text = "WORLD NAME:"
vertical_alignment = 1

[node name="name_input" type="LineEdit" parent="Panel/Control"]
layout_mode = 0
offset_left = 300.0
offset_top = 100.0
offset_right = 650.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(0.06666667, 0.11764706, 0.18431373, 1)
theme_override_fonts/font = ExtResource("2_nfubj")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_klo70")
text = "CLICK TO WRITE"
alignment = 1
max_length = 16

[node name="mode_label" type="Label" parent="Panel/Control"]
layout_mode = 0
offset_left = 50.0
offset_top = 180.0
offset_right = 300.0
offset_bottom = 230.0
theme_override_colors/font_color = Color(0.06666667, 0.11764706, 0.18431373, 1)
theme_override_fonts/font = ExtResource("2_nfubj")
theme_override_font_sizes/font_size = 32
text = "WORLD MODE:"
vertical_alignment = 1

[node name="current_mode_label" type="Label" parent="Panel/Control"]
layout_mode = 0
offset_left = 300.0
offset_top = 180.0
offset_right = 650.0
offset_bottom = 230.0
theme_override_colors/font_color = Color(0.06666667, 0.11764706, 0.18431373, 1)
theme_override_fonts/font = ExtResource("2_nfubj")
theme_override_font_sizes/font_size = 32
text = "SURVIVAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="left_btn" type="Button" parent="Panel/Control"]
layout_mode = 0
offset_left = 340.0
offset_top = 184.0
offset_right = 372.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("8_bs61g")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("9_43ffj")
theme_override_styles/pressed = ExtResource("10_b8ycx")
theme_override_styles/hover = ExtResource("11_xxrcf")
theme_override_styles/disabled = ExtResource("12_ymudp")
theme_override_styles/focus = SubResource("StyleBoxFlat_u7sv1")
text = "◀"

[node name="right_btn" type="Button" parent="Panel/Control"]
layout_mode = 0
offset_left = 578.0
offset_top = 184.0
offset_right = 610.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("8_bs61g")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("9_43ffj")
theme_override_styles/pressed = ExtResource("10_b8ycx")
theme_override_styles/hover = ExtResource("11_xxrcf")
theme_override_styles/disabled = ExtResource("12_ymudp")
theme_override_styles/focus = ExtResource("13_vmvqf")
text = "▶"

[node name="seed_label" type="Label" parent="Panel/Control"]
layout_mode = 0
offset_left = 50.0
offset_top = 260.0
offset_right = 300.0
offset_bottom = 310.0
theme_override_colors/font_color = Color(0.06666667, 0.11764706, 0.18431373, 1)
theme_override_fonts/font = ExtResource("2_nfubj")
theme_override_font_sizes/font_size = 32
text = "WORLD SEED:"
vertical_alignment = 1

[node name="seed_input" type="LineEdit" parent="Panel/Control"]
layout_mode = 0
offset_left = 300.0
offset_top = 260.0
offset_right = 650.0
offset_bottom = 310.0
theme_override_colors/font_color = Color(0.06666667, 0.11764706, 0.18431373, 1)
theme_override_fonts/font = ExtResource("2_nfubj")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_klo70")
text = "2147483648"
alignment = 1
max_length = 16

[connection signal="pressed" from="Panel/next_btn" to="." method="_on_next_btn_pressed"]
[connection signal="pressed" from="Panel/back_btn" to="." method="_on_back_btn_pressed"]
[connection signal="editing_toggled" from="Panel/Control/name_input" to="." method="_on_name_input_editing_toggled"]
[connection signal="text_changed" from="Panel/Control/name_input" to="." method="_on_name_input_text_changed"]
[connection signal="pressed" from="Panel/Control/left_btn" to="." method="_on_left_btn_pressed"]
[connection signal="pressed" from="Panel/Control/right_btn" to="." method="_on_right_btn_pressed"]
[connection signal="text_changed" from="Panel/Control/seed_input" to="." method="_on_seed_input_text_changed"]
